sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value m
m = 0;
^AlgCocktailSort2:5: error: not found: value l
l = 0;
^AlgCocktailSort2:9: error: not found: value l
 for(i <- 0 to (getNombreValeurs()-l-2))
                                   ^AlgCocktailSort2:18: error: not found: value m
 for(i <- (getNombreValeurs()-m-2) to 0 by -1) {
                              ^