sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {

m = 0;
l = 0;
var trie: Int = 0;
while (trie == 0) {
   trie = 1;
 for(i <- 0 to (getNombreValeurs()-l-2))
       {i++;
       	if(getValeur(i+1) < getValeur(i))
        {  
  echange(i+1,i);
  trie = 0;
        }
      }
 
 for(i <- (getNombreValeurs()-m-2) to 0 by -1) {
 	m++;
  if(getValeur(i+1) < getValeur(i)) {
   echange(i+1,i);
   trie = 0;
  }
 }
}
 



}
